--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,6 +1,7 @@
 const path = require("path");
 
 module.exports = {
-  "config": path.resolve("configs"),
-  "models-path": path.resolve("models"),
+    "config": path.resolve("config", "database.js"),
+    "models-path": path.resolve("models"),
+    "migrations-path": path.resolve("migrations"),
 };
