--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "express": "~4.16.1",
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
-    "moment": "^2.25.3",
+    "method-override": "^3.0.0",
+    "moment": "^2.26.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.8"
+    "sequelize": "^5.21.11"
   },
   "devDependencies": {
     "sequelize-cli": "^5.5.1"
