--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "^4.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
@@ -18,9 +19,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.11"
-  },
-  "devDependencies": {
+    "sequelize": "^5.21.11",
     "sequelize-cli": "^5.5.1"
   }
 }
